<resources>
    <string name="app_name">Lesson</string>
    <string name="show_text_password">密码</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop">停止</string>
    <string name="button_send">查看全部</string>
    <string name="button_create">创建</string>
    <string name="button_add">添加账号</string>
    <string name="show_text">账号</string>
    <string name="show_name">名称</string>
    <string name="get_text">状态</string>
    <string name="title_activity_display_message">全部信息</string>
    <string name="Server_Name">name</string>
</resources>
